--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,24 @@
 .button-container {
-    text-align: center;
+    display: flex;
+    justify-content: center;
     margin-top: 20px;
   }
   
   .button {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 12px 30px;
     margin: 10px;
-    background-color: #003366;
+    background-color: #007BFF;
     color: white;
     text-decoration: none;
-    border-radius: 5px;
-    font-size: 16px;
+    border-radius: 25px;
+    font-size: 18px;
+    transition: background-color 0.3s, transform 0.3s;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
   
   .button:hover {
-    background-color: #0059b3;
+    background-color: #0056b3;
+    transform: translateY(-3px);
   }
   
