--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
+
     <header>
+        <div class="site-title">
+            <h1><a href="{{ '/' | relative_url }}">Jorge Fernández</a></h1>
+        </div>
         <nav>
             <ul>
                 <li><a href="{{ '/' | relative_url }}">Inicio</a></li>
@@ -22,7 +26,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Jorge Fernández</p>
+        <p>&copy; 2024 Jorge Fernández. Todos los derechos reservados.</p>
     </footer>
+
 </body>
 </html>
