--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,10 @@
     </header>
 
     <main>
-        {{ content }}
+        <!-- Aquí agregamos un div contenedor -->
+        <div class="container">
+            {{ content }}
+        </div>
     </main>
 
     <footer>
