--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,15 +3,15 @@
     max-width: 800px;
     margin: 0 auto; /* Centra el contenedor horizontalmente */
     padding: 20px; /* Añade espacio alrededor del contenido */
-    background-color: #f8f9fa; /* Color de fondo suave para enmarcar */
-    border: 1px solid #e3e3e3; /* Borde para dar el efecto de enmarcado */
+    background-color: #3e3943; /* Color de fondo suave para enmarcar */
+    border: 1px solid #363645; /* Borde para dar el efecto de enmarcado */
     border-radius: 8px; /* Bordes redondeados */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra ligera para el enmarcado */
 }
 
 body {
     font-family: Arial, sans-serif; /* Cambia la fuente si lo deseas */
-    background-color: #2c3e50; /* Fondo del tema Midnight */
+    background-color: #38354a; /* Fondo del tema Midnight */
     color: #ecf0f1; /* Color del texto */
 }
 
