--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,24 +3,65 @@
     max-width: 800px;
     margin: 0 auto; /* Centra el contenedor horizontalmente */
     padding: 20px; /* Añade espacio alrededor del contenido */
-    background-color: #3e3943; /* Color de fondo suave para enmarcar */
-    border: 1px solid #363645; /* Borde para dar el efecto de enmarcado */
+    background-color: #e1e7ec; /* Fondo Mystic para enmarcar */
+    border: 1px solid #8ea5bd; /* Borde Nepal para darle un ligero contraste */
     border-radius: 8px; /* Bordes redondeados */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra ligera para el enmarcado */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra ligera */
 }
 
 body {
     font-family: Arial, sans-serif; /* Cambia la fuente si lo deseas */
-    background-color: #38354a; /* Fondo del tema Midnight */
-    color: #ecf0f1; /* Color del texto */
+    background-color: #323642; /* Fondo principal Tuna */
+    color: #e1e7ec; /* Color del texto Mystic */
 }
 
-main {
-    margin-top: 30px;
+h1, h2, h3 {
+    color: #8ea5bd; /* Títulos con el color Nepal */
+}
+
+a {
+    color: #879bb2; /* Enlaces con el color Bali Hai */
+    text-decoration: none;
+}
+
+a:hover {
+    color: #8ea5bd; /* Enlaces al pasar el cursor, cambiando a Nepal */
+}
+
+nav {
+    background-color: #323642; /* Fondo del menú con Tuna */
+    padding: 10px;
+    text-align: center;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li a {
+    color: #e1e7ec; /* Color de los enlaces del menú Mystic */
+    background-color: #879bb2; /* Fondo de los botones del menú Bali Hai */
+    padding: 10px 15px;
+    border-radius: 5px;
+}
+
+nav ul li a:hover {
+    background-color: #8ea5bd; /* Al pasar el cursor, fondo Nepal */
 }
 
 footer {
     text-align: center;
-    padding: 10px 0;
-    color: #bdc3c7;
+    padding: 20px 0;
+    color: #e1e7ec; /* Color del texto del pie de página Mystic */
+    background-color: #323642; /* Fondo del pie de página Tuna */
+}
+
+main {
+    margin-top: 30px;
 }
