--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
 <body>
 
     <header>
-        <div class="site-title">
+        <!-- <div class="site-title">
             <h1><a href="{{ '/' | relative_url }}">Jorge Fernández</a></h1>
-        </div>
+        </div> -->
         <nav>
             <ul>
                 <li><a href="{{ '/' | relative_url }}">Inicio</a></li>
