--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,19 +8,23 @@
     border-radius: 8px; /* Bordes redondeados */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra ligera */
     color: #323642; /* Color de texto Tuna para contraste */
+    font-family: 'Roboto', sans-serif; /* Aplicar Roboto */
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif; /* Aplicar Roboto */
     background-color: #323642; /* Fondo principal Tuna */
     color: #e1e7ec; /* Color del texto general fuera del contenedor */
 }
 
 h1, h2, h3 {
-    color: #8ea5bd; /* Títulos con el color Nepal */
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700; /* Negrita */
+    color: #879bb2; /* Color Bali Hai */
 }
 
 a {
+    font-family: 'Roboto', sans-serif; /* Aplicar Roboto */
     color: #879bb2; /* Enlaces con Bali Hai */
     text-decoration: none;
 }
@@ -30,6 +34,7 @@ a:hover {
 }
 
 nav {
+    font-family: 'Roboto', sans-serif; /* Aplicar Roboto */
     background-color: #323642; /* Fondo del menú Tuna */
     padding: 10px;
     text-align: center;
@@ -46,6 +51,7 @@ nav ul li {
 }
 
 nav ul li a {
+    font-family: 'Roboto', sans-serif; /* Aplicar Roboto */
     color: #e1e7ec; /* Color de los enlaces del menú Mystic */
     background-color: #879bb2; /* Fondo de los botones del menú Bali Hai */
     padding: 10px 15px;
@@ -57,6 +63,7 @@ nav ul li a:hover {
 }
 
 footer {
+    font-family: 'Roboto', sans-serif; /* Aplicar Roboto */
     text-align: center;
     padding: 20px 0;
     color: #e1e7ec; /* Color del texto del pie de página Mystic */
@@ -67,9 +74,9 @@ main {
     margin-top: 30px;
 }
 
-
 /* Estilos del formulario de contacto */
 form {
+    font-family: 'Roboto', sans-serif; /* Aplicar Roboto */
     background-color: #e1e7ec; /* Fondo claro Mystic */
     padding: 20px;
     border-radius: 8px;
@@ -77,11 +84,13 @@ form {
 }
 
 form label {
+    font-family: 'Roboto', sans-serif; /* Aplicar Roboto */
     color: #323642; /* Color del texto del formulario */
     font-weight: bold;
 }
 
 form input, form textarea {
+    font-family: 'Roboto', sans-serif; /* Aplicar Roboto */
     width: 100%;
     padding: 10px;
     margin-top: 5px;
@@ -92,6 +101,7 @@ form input, form textarea {
 }
 
 form button {
+    font-family: 'Roboto', sans-serif; /* Aplicar Roboto */
     background-color: #8ea5bd; /* Fondo del botón Nepal */
     color: white;
     padding: 10px 20px;
